[tool.poetry]
name = "ekf-digital-microservice"
version = "0.1.0"
description = ""
authors = ["Danila Novichikhin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.19"
fastapi = "^0.100.0"
alembic = "^1.11.1"
uvicorn = "^0.23.1"
pydantic-settings = "^2.0.2"
asyncpg = "^0.28.0"
greenlet = "^2.0.2"
psycopg2-binary = "^2.9.6"
orjson = "^3.9.2"
aio-pika = "^9.1.4"
aiohttp = "^3.8.5"
msgpack = "^1.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
